--- a/src/index.css
+++ b/src/index.css
@@ -61,45 +61,37 @@ a {
   background-color: white;
 }
 
-form {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 80px;
-
-  /* max-width: 500px; */
-  /* margin: 0 auto; */
-  background: #595959;
-  padding: 10px 20px;
-  /* margin-top: 50px; */
-  /* border-radius: 5px; */
-  /* box-shadow: 1px 2px 10px #ddd; */
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  color: white;
 }
 
-body {
-  background: #161616;
+form {
+  display: flex;
+  justify-content: space-around;
+  background: #595959;
+  padding: 10px 20px;
+  align-content: space-between;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.fabutton {
+  background: none;
+  padding: 0px;
+  border: none;
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
   background: #161616;
+  height: 100vh;
 }
-
-
-/* .App { */
-/* display: flex; */
-/* flex-direction: column; */
-/* justify-content: start;  */
-/* width: 375px;
-  min-height: 600px;
-   max-height: 914;
-  background: #161616;
-  text-align: center;
-  margin: 128px auto;
-  border-radius: 10px;
-  padding-bottom: 32px; 
-  
-} */
 
 @media(max-width:768px) {
   .hamburger {
@@ -141,14 +133,17 @@ body {
 
 article {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  align-items: center;
   border-radius: 10px;
   color: white;
-  padding: 10px 16px;
-  margin: 20px 15px 15px;
+  padding: 10px 20px;
+  margin: 10px 15px 15px;
   background-color: #532470;
+}
+
+.task {
+  display: flex;
+  flex: 1;
 }
 
 .items-preview:hover {
@@ -159,26 +154,56 @@ article {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 50%;
-  width: 40px;
+  height: auto;
+  width: 100%;
+  margin-left: 13px;
 }
 
 input {
-  height: 70%;
-  width: 80%;
+  width: 85%;
+  padding: 10px;
   border-radius: 10px;
+  border: none;
   background-color: #C7C5C5;
 }
 
-.task {
-  float: left;
-  margin-left: -150px;
+.completed-task {
+  text-decoration: line-through;
 }
 
 .icons {
   color: #D17E02;
 }
- 
+
+.archived {
+  display: flex;
+  flex: 0.5;
+  color: white;
+  background-color: #7A7A7A;
+}
+
 .error {
   color: white;
+}
+
+.content-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  color: white;
+  margin-top: 30px;
+}
+
+
+
+img {
+  max-width: 90%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+p {
+  font-size: larger;
 }
